# python_tutorials

./: README.md  main.py  pyproject.toml  requirements.txt
basics/: argument_parser.py  func_and_decorator.py
data/: .~lock.HousePricePrediction.xlsx#
notebooks/: house_price_prediction.ipynb  linear_regression_from_scratch.ipynb
notebooks/.ipynb_checkpoints/: house_price_prediction-checkpoint.ipynb  linear_regression_from_scratch-checkpoint.ipynb
