[project]
name = "python-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyterlab==3.4.4",
    "lightgbm==3.3.4",
    "loguru==0.7.2",
    "matplotlib==3.5.2",
    "numpy==1.21.6",
    "openpyxl==3.0.10",
    "pandas==1.4.4",
    "scikit-learn==1.0.2",
    "seaborn==0.11.2",
]
